# stupid-cpp-serde

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md
cmake/: scs_serdeConfig.cmake.in
doc/: macro_zh.md  serde_zh.md
examples/: CMakeLists.txt  basic_usage.cc
include/scs/: macros.h  members.h  serializer.h  structure.h
include/scs/base/: encoding.h  macros.h  map.h  members.h  serializer.h  string.h  structure.h  type_name.h  vector.h
tests/: test_deserialization.cc  test_serialization.cc  test_structures.cc
